refactor code and added functionnalities